Configuración de sonar

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,6 @@
 sonar.projectKey=MurcielagoS3
 sonar.projectName=MurcielagoS3
+sonar.projectVersion=1.0
 sonar.sourceEncoding=UTF-8
 sonar.sources=.
 #sonar.exclusion="list of folders which will exclude from scan"
